<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vokapps.support.Register"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/app_name"
        android:layout_width="270dp"
        android:layout_height="90dp"
        android:text="@string/app_name"
        android:src="@drawable/white"
        android:layout_marginTop="65dp"
        android:layout_centerHorizontal="true"/>





    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#8c000000"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/card"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/nameleft"
                android:layout_gravity="center_horizontal|center" />



            <EditText
                android:id="@+id/full_name_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1"
                android:ems="10"
                android:textColor="#ffffff"
                android:textColorHint="#cccccc"
                android:textSize="18sp"
                android:layout_gravity="top|left"
                android:backgroundTint="#ffffff"
                android:layout_marginLeft="5dp"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/emailleft"
                android:layout_gravity="center_horizontal|center"
                />


            <EditText
                android:id="@+id/email_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:textColorHint="#cccccc"
                android:textSize="18sp"
                android:layout_marginTop="2.5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="#ffffff"
                />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/company_name"
                android:layout_gravity="center_horizontal|center" />



            <EditText
                android:id="@+id/company_name_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/company_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:textColorHint="#cccccc"
                android:textSize="18sp"
                android:backgroundTint="#ffffff"
                android:layout_marginLeft="5dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/mobile"
                android:layout_gravity="center_horizontal|center" />

            <EditText
                android:id="@+id/mobile_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:backgroundTint="#ffffff"
                android:gravity="center"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:textColorHint="#cccccc"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/password"
                android:layout_gravity="center_horizontal|center" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:backgroundTint="#ffffff"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="6"
                android:textColor="#ffffff"
                android:textColorHint="#cccccc"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/password"
                android:layout_gravity="center_horizontal|center" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:backgroundTint="#ffffff"
                android:gravity="center"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:textColorHint="#cccccc"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>



    </LinearLayout>


    </android.support.v7.widget.CardView>



    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AVLoadingIndicatorView"
        app:indicatorName="BallClipRotateIndicator"
        app:indicatorColor="#ffffff"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/signup"
        android:id="@+id/createUserButton"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:backgroundTint="#3b5998"
        android:layout_marginRight="-5dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginBottom="-7dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:onClick="SignUp"
        android:textAllCaps="false"/>















</RelativeLayout>
