<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vokapps.support.Home">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#65ffffff">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/voktecklogo"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/hore1"
                android:layout_marginBottom="100dp"
                android:gravity="center"
                android:layout_alignParentBottom="true">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/veri1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:id="@+id/chatImage"
                        android:onClick="ChatWithUsTapped"
                        android:src="@drawable/chat" />

                    <TextView
                        android:text="@string/chat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/chatTextView"
                        android:textColor="#000000"
                        android:onClick="ChatWithUsTapped"
                        android:layout_marginTop="2.5dp"
                        android:textSize="17sp"/>

                </LinearLayout>


                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/veri2"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp">



                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:onClick="conversationTaped"
                        app:srcCompat="@drawable/conversation"
                        android:id="@+id/conversationImage"/>


                    <TextView
                        android:id="@+id/conversationTextView"
                        android:layout_width="wrap_content"
                        android:onClick="conversationTaped"
                        android:layout_height="wrap_content"
                        android:text="@string/conversation"
                        android:textColor="#000000"
                        android:layout_marginTop="2.5dp"
                        android:textSize="17sp" />



                </LinearLayout>


                <LinearLayout
                    android:id="@+id/veri3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">


                    <ImageView
                        android:id="@+id/logoutImage"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/logout"
                        android:onClick="LogOut"/>

                    <TextView
                        android:id="@+id/logoutTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:textColor="#000000"
                        android:layout_marginTop="2.5dp"
                        android:textSize="17sp"
                        android:onClick="LogOut"/>


                </LinearLayout>



            </LinearLayout>







        </RelativeLayout>


    </android.support.v7.widget.CardView>




</RelativeLayout>
