<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:background="@drawable/background"
    tools:context="com.vokapps.support.Login">




    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/white"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:id="@+id/imageView" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#8c000000"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/card"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:src="@drawable/nameleft"
                    android:layout_gravity="center_horizontal|center" />



                <EditText
                    android:id="@+id/full_name_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="Email"
                    android:inputType="textPersonName"
                    android:maxLength="60"
                    android:maxLines="1"
                    android:ems="10"
                    android:textColor="#ffffff"
                    android:textColorHint="#cccccc"
                    android:textSize="18sp"
                    android:layout_gravity="top|left"
                    android:backgroundTint="#ffffff"
                    android:layout_marginLeft="5dp"/>



            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:src="@drawable/password"
                    android:layout_gravity="center_horizontal|center" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2.5dp"
                    android:backgroundTint="#ffffff"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:textColor="#ffffff"
                    android:textColorHint="#cccccc"
                    android:textSize="18sp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_above="@+id/login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AVLoadingIndicatorView"
        android:layout_centerHorizontal="true"
        app:indicatorName="BallClipRotateIndicator"
        app:indicatorColor="#ffffff"
         />




    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/facebook"
        android:id="@+id/login_facebook"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:backgroundTint="#3b5998"
        android:layout_marginRight="-5dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginBottom="-12dp"
        android:layout_above="@+id/signUp_btn"
        android:gravity="center"
        android:onClick="Register"
        android:textAllCaps="false"/>




    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/signup"
        android:id="@+id/signUp_btn"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:backgroundTint="#c8000000"
        android:layout_marginRight="-5dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginBottom="-7dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:onClick="Register"
        android:textAllCaps="false"/>



</RelativeLayout>
